fixed nav overlapping

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -27,6 +27,9 @@
         text-align: center;
         color: $color-header-text;
         font-size: 2rem;
+        @media screen and (max-width: 768px) {
+            left: 60%;
+        }
 
     }
     &__login-text {
